# C-

./: README.md
A* search/: a.out  main.cpp  test.cpp
DataStructures/AverageOfAllSubarrays/: main.cpp
DataStructures/StockBuySell/: main.cpp
DataStructures/moveAllZerosToTheLeft/: main.cpp
otus-algorithms/01.spells/: CMakeLists.txt  README.md  main.cpp
otus-algorithms/02.lucky_tickets/: CMakeLists.txt  README.md  main.cpp
otus-algorithms/03.algebraic_algorithms/: Algebraic Algorithms Analysis.xlsx  CMakeLists.txt  Matrix.h  README.md  main.cpp
otus-algorithms/04.data_structures/: CMakeLists.txt  Data Strucutures Analysis.xlsx  FactorArray.h  GenericArray.h  Generic_Container.h  List_Container.h  MatrixArray.h  PriorityQueue.h  README.md  SingleArray.h  VectorArray.h  main.cpp
otus-algorithms/05.bitwise_arithmetic/: CMakeLists.txt  README.md  main.cpp
otus-algorithms/06.simple_sorting/: CMakeLists.txt  README.md  Sortung Analysis.xlsx  main.cpp
otus-algorithms/07.pyramidal_sorting/: CMakeLists.txt  PyramidalSorting Analysis.xlsx  README.md  main.cpp
otus-algorithms/08.quick_and_external_sorting/: CMakeLists.txt  QuickAndExternalSortingAnalysis.xlsx  README.md  main.cpp
otus-algorithms/09.linear_sorting/: CMakeLists.txt  LinearlSortingAnalysis.xlsx  README.md  main.cpp
otus-algorithms/10.binary_and_avl_trees/: CMakeLists.txt  (+2 more)
otus-cpp-basics/03.check_value/: CMakeLists.txt  main.cpp  read_the_high_score_file.cpp  read_the_high_score_file.h  target_value_generator.cpp  target_value_generator.h  write_new_high_score.cpp  write_new_high_score.h
(+123 files in other folders)
